--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -11,3 +11,6 @@ sql:
         emit_empty_slices: true
         emit_json_tags: true
         emit_pointers_for_null_types: true
+        overrides:
+        - column: items.published_at
+          go_type: time.Time
